examples/bad/06_2_return_outside_of_func.soy
a = 6;

return a; # ERROR: return outside of function